@@ -2369,7 +2369,7 @@ dc1394_free(dc1394_t *dc1394)
   computer. The number of cameras is also returned. 
 */
 dc1394error_t
-dc1394_enumerate_cameras(dc1394_t *dc1394, dc1394camera_list_t *list)
+dc1394_enumerate_cameras(dc1394_t *dc1394, dc1394camera_list_t **list)
 {
   int i;
 
@@ -2381,14 +2381,28 @@ dc1394_enumerate_cameras(dc1394_t *dc1394, dc1394camera_list_t *list)
   //if (list->guids!=NULL)
   //  free(list->guids);
 
-  list->guids=(uint64_t*)malloc(dc1394->n_cam*sizeof(uint64_t));
-  list->num=dc1394->n_cam;
+  *list=(dc1394camera_list_t*)malloc(sizeof(dc1394camera_list_t));
+
+  (*list)->guids=(uint64_t*)malloc(dc1394->n_cam*sizeof(uint64_t));
+  (*list)->num=dc1394->n_cam;
   
   for (i=0;i<dc1394->n_cam;i++)
-    list->guids[i]=dc1394->guids[i];
+    (*list)->guids[i]=dc1394->guids[i];
 
   return DC1394_SUCCESS;
 }
+
+
+/*
+  Free a list of cameras returned by dc1394_enumerate_cameras()
+ */
+void
+dc1394_free_camera_list(dc1394camera_list_t *list)
+{
+  free(list->guids);
+  free(list);
+}
+
 
 /*
   Creates a new camera structure and initialise it so that it's ready to use.
