@@ -1,3 +1,6 @@
+2007-08-20 Damien Douxchamps http://damien.douxchamps.net/
+        * SVN 420: again, changes on the new camera detection API.
+
 2007-08-16 Damien Douxchamps http://damien.douxchamps.net/
         * SVN 419: more changes on the new camera detection API.
         * SVN 418: first changes on the new camera detection API.
